--- a/style.css
+++ b/style.css
@@ -32,11 +32,13 @@ header{
     padding: 5px;
 }
 header > h1{
+    margin: 0px;
     font-weight: bold;
     text-align: center;
     text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.288);
 }
 header > p{
+    margin: 0px;
     text-align: center;
     padding: 5px;
 }
@@ -44,7 +46,7 @@ nav > a{
     color: white;
     font-weight: bold;
     text-decoration: none;
-    margin: 5px 0px 0px 0px;
+    margin: 0px;
     transition-duration: 0.5s;
     padding: 12px 15px 12px 15px;
     border-radius: 5px;
